--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,22 +7,31 @@ android {
         applicationId "com.vcdevelopmentworld.interview"
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 7
-        versionName "2.7"
+        versionCode 9
+        versionName "2.9"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    signingConfigs {
+        config {
+            storePassword 'Luck2468'
+            keyAlias = 'key0'
+            keyPassword 'Luck2468'
+        }
+    }
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-
     buildFeatures {
         viewBinding true
     }
@@ -34,6 +43,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
